--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Form Validation</title>
-  </head>
-  <body>
-
+</head>
+<body>
+    <form class="form">
+        <div>
+            <label for="first-name">FIRST NAME</label>
+            <input type="text" class="first-name">
+        </div>
+        <div>
+            <label for="last-name">LAST NAME</label>
+            <input type="text" name="last-name" class="last-name">
+        </div>
+        <div>
+            <label for="email">EMAIL ADDRESS</label>
+            <input type="text" name="email" class="email">
+        </div>
+        <div>
+          <label>COUNTRY</label>
+          <select class ="country" name="country">
+            <option value="">Choose a Country</option>
+            <option value="United-States">United States</option>
+            <option value="Mexico">Mexico</option>
+          </select>
+        </div>
+        <div>
+            <label for="bio">BIOGRAPHY</label><br>
+            <textarea class="bio" type="input" name="bio" rows="7" cols="20"></textarea><br />
+        </div>
+        <div>
+            <label for="phone">PHONE NUMBER</label>
+            <input type="text" name="phone" class="phone">
+        </div>
+        <div>
+            <label for="affiliations">AFFILIATIONS</label><br>
+            <textarea class="affiliations" type="input" name="affiliations" rows="7" cols="20"></textarea><br />
+        </div>
+        <div>
+          <label>OCCUPATION</label>
+          <select class="occupation" name="occupation">
+            <option value="">Choose an Occupation</option>
+            <option value="student">Student</option>
+            <option value="unemployed">Unemployed</option>
+          </select>
+        </div>
+        <div>
+            <label for="cat-name">CAT'S NAME</label>
+            <input type="text" name="cat-name" class="cat-name">
+        </div>
+        <div>
+            <label for="fave-gadget">FAVORITE GADGET</label>
+            <input type="text" name="fave-gadget" class="fave-gadget">
+        </div>
+        <div>
+          <label>TYPE OF TALENT</label>
+          <select class="talent" name="talent">
+            <option value="">Choose a Talent</option>
+            <option value="coding">Coding</option>
+            <option value="gaming">Gaming</option>
+          </select>
+        </div>
+        <div>
+            <label for="fave-drink">FAVORITE DRINK</label>
+            <input type="text" name="fave-drink" class="fave-drink">
+        </div>
+        <div>
+            <label for="power">SPECIAL POWER</label>
+            <input type="text" name="power" class="power">
+        </div>
+        <div>
+            <label for="weapon">WEAPON OF CHOICE</label>
+            <input type="text" name="weapon" class="weapon">
+        </div>
+        <div>
+            <label for="comments">COMMENTS</label><br>
+            <textarea class="comments" type="input" name="comments" rows="7" cols="20"></textarea><br />
+        </div>
+    </form>
+    <button class="submit">Submit</button>
     <script src="main.js"></script>
-  </body>
+</body>
 </html>
